Fixed weird white border on iphones

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,6 +1,21 @@
+@media
+only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (-o-min-device-pixel-ratio: 3/2),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5){
+
+  html,
+  body{
+    width:100%;
+    overflow-x:hidden;
+  }
+
+}
+
 body {
   width: 95%;
   margin: 30px auto;
+  padding: 0px 20px;
 }
 
 #login-grid {
